Перенёс полностью HomePage

--- a/src/components/UI/SocialIcons/SocialIcons.module.scss
+++ b/src/components/UI/SocialIcons/SocialIcons.module.scss
@@ -1,7 +1,12 @@
-.about_social img {
-    margin-right: 14px;
+.about_social {
+    display: flex;
+    align-items: center;
 
-    &:hover {
-        scale: 1.07;
+    img {
+        margin-right: 15px;
+
+        &:hover {
+            scale: 1.07;
+        }
     }
 }
