--- a/src/components/smart/SubscribePlan/SubscribePlan.module.scss
+++ b/src/components/smart/SubscribePlan/SubscribePlan.module.scss
@@ -2,10 +2,10 @@
 
 .block__container {
     border-radius: 22px;
-    border: 0.5px solid #FFF;
+    border: 1px solid #FFF;
     display: flex;
     flex-direction: column;
-    max-width: 80%;
+    max-width: 1300px;
     margin-bottom: 150px;
     background-color: #000;
     font-family: $fontIndivisible;
