--- a/src/components/simple/RegisterForm/RegisterForm.module.scss
+++ b/src/components/simple/RegisterForm/RegisterForm.module.scss
@@ -48,6 +48,11 @@
         border: none;
         margin-bottom: 20px;
         padding-left: 10px;
+
+        &:focus {
+            outline: #fff;
+            caret-color: #fff;
+        }
     }
 }
 
@@ -74,4 +79,9 @@
     margin-bottom: 10px;
     font-size: 18px;
     font-weight: 600;
+}
+
+.warning {
+    color: #f11111;
+    margin-top: -10px;
 }
