--- a/src/components/simple/RegisterForm/RegisterForm.module.scss
+++ b/src/components/simple/RegisterForm/RegisterForm.module.scss
@@ -23,35 +23,9 @@
     .inputs__pos {
         display: flex;
         flex-direction: row;
-    }
-}
 
-.input__box {
-    display: flex;
-    flex-direction: column;
-    margin-right: 20px;
-
-    label {
-        padding-left: 5px;
-        font-size: 20px;
-        font-weight: 600;
-        margin-bottom: 5px;
-    }
-
-    input {
-        width: 460px;
-        height: 50px;
-        border-radius: 6px;
-        background: #686868;
-        color: #fff;
-        font-size: 20px;
-        border: none;
-        margin-bottom: 20px;
-        padding-left: 10px;
-
-        &:focus {
-            outline: #fff;
-            caret-color: #fff;
+        input {
+            margin-right: 20px;
         }
     }
 }
@@ -83,5 +57,6 @@
 
 .warning {
     color: #f11111;
-    margin-top: -10px;
+    margin-top: -15px;
+    margin-left: 500px;
 }
