--- a/src/components/smart/ChooseLng/ChooseLng.module.scss
+++ b/src/components/smart/ChooseLng/ChooseLng.module.scss
@@ -1,6 +1,8 @@
 .container {
     display: flex;
     align-items: center;
+    cursor: pointer;
+    max-width: 70px;
 }
 .arrow {
     font-size: 20px;
