--- a/src/pages/Cabinet/Cabinet.module.scss
+++ b/src/pages/Cabinet/Cabinet.module.scss
@@ -8,7 +8,8 @@
 
 .container {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: center;
     padding: 60px 40px;
 }
 
@@ -17,4 +18,9 @@
     font-size: 38px;
     margin-bottom: 5px;
     margin-left: 25px;
+}
+
+.right__margin {
+    margin-top: 51px;
+    margin-left: 120px;
 }
