--- a/src/components/smart/ChooseLng/ChooseLng.module.scss
+++ b/src/components/smart/ChooseLng/ChooseLng.module.scss
@@ -3,7 +3,20 @@
     align-items: center;
     cursor: pointer;
     max-width: 70px;
+    position: relative;
+    padding: 5px;
 }
+
 .arrow {
     font-size: 20px;
+}
+
+.prapor__con {
+    position: absolute;
+    list-style: none;
+    background-color: #d9d9d9;
+}
+.prapor {
+    cursor: pointer;
+    padding: 0 5px;
 }
