--- a/src/components/smart/ChooseLng/ChooseLng.module.scss
+++ b/src/components/smart/ChooseLng/ChooseLng.module.scss
@@ -15,6 +15,7 @@
     position: absolute;
     list-style: none;
     background-color: #d9d9d9;
+    overflow: hidden;
 }
 .prapor {
     cursor: pointer;
