--- a/src/components/simple/HomeHeader/HomeHeader.module.scss
+++ b/src/components/simple/HomeHeader/HomeHeader.module.scss
@@ -1,14 +1,26 @@
 @import '../../../styles/var';
 
 .header {
-    background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,4,23,1) 38%, rgba(236,148,34,1) 80%, rgba(249,249,249,1) 99%);
+    background: #000;
     height: 100svh;
     display: flex;
     align-items: center;
+    position: relative;
+    overflow: hidden;
+}
+
+.background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,4,23,1) 38%, rgba(236,148,34,1) 80%, rgba(249,249,249,1) 99%);
 }
 
 .container {
     margin-left: 160px;
+    z-index: 2;
 }
 
 .top,
