Открыл изменения по NavBar, стилизовал, убрал тестирование из useAuth

--- a/src/components/UI/NavBar/NavBar.module.scss
+++ b/src/components/UI/NavBar/NavBar.module.scss
@@ -58,3 +58,10 @@
         font-family: $fontIndivisible;
     }
 }
+
+.login {
+    border: 1px solid #fff;
+    border-radius: 5px;
+    padding: 10px 20px;
+    cursor: pointer;
+}
