--- a/src/components/simple/CabinetPlanBlock/CabinetPlan.module.scss
+++ b/src/components/simple/CabinetPlanBlock/CabinetPlan.module.scss
@@ -42,3 +42,36 @@
     align-items: center;
     cursor: pointer;
 }
+
+
+// Когда нету плана
+.content_without_plan {
+    position: relative;
+    width: 840px;
+    height: 520px;
+    background: linear-gradient(180deg, #D9D9D9 0%, #000 100%);
+    color: #fff;
+
+    &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(180deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.8) 100%); 
+        z-index: 1;
+    }
+
+    .choose_plan_btn {
+        font-size: 20px;
+        position: absolute;
+        top:50%;
+        left:50%;
+        transform:translate(-50%, -50%);
+        z-index: 2;
+        border: 1px solid #fff;
+        border-radius: 10px;
+        padding: 20px 30px;
+    }
+}
